k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eshop
  labels:
    app: eshop
    managed-by: kubectl
